// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MasonryList renders correctly 1`] = `
<RCTScrollView
  data={Array []}
  getHeightForItem={[Function]}
  numColumns={1}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={50}
>
  <View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "flex": 1,
            },
          ]
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`MasonryList should render a header 1`] = `
<RCTScrollView
  ListHeaderComponent={[Function]}
  data={
    Array [
      Object {
        "key": "i1",
      },
      Object {
        "key": "i2",
      },
      Object {
        "key": "i3",
      },
    ]
  }
  getHeightForItem={[Function]}
  numColumns={1}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={50}
>
  <View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <header />
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`MasonryList should render a single column list 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "key": "i1",
      },
      Object {
        "key": "i2",
      },
      Object {
        "key": "i3",
      },
    ]
  }
  getHeightForItem={[Function]}
  numColumns={1}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={50}
>
  <View>
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <item
          value="i1"
        />
        <item
          value="i2"
        />
        <item
          value="i3"
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;
